<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_favorite"></string>
    <string name="Settings">设置</string>
    <string name="server">服务器</string>
    <string name="language">语言</string>
    <string name="action_setting">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="scan_button">Scan Start</string>

    <string-array name="languages"></string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_project">Project</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Map</string>
    <string name="title_activity_project_test">Project_test</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_add_lamp">Add_lamp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Strings related to scan-->
    <string name="instruction_1"> 手动输入 </string>
    <string name="instruction_2"> 扫描输入 </string>

    <!--Strings related to tabs-->
    <string name="list"> 项目列表 </string>
    <string name="map"> 地图 </string>
    <string name="history"> 历史 </string>

    <!--Strings related to label-->
    <string name="controller">控制器</string>
    <string name="lamp">灯具</string>
    <string name="title_activity_maps_test">Map</string>

    <!--String related to project list-->
    <string name="Project_detail"> 项目总览</string>
    <string name="alarm">警报接收</string>
    <string name="logout">退出登录</string>
    <string name="hist">历史操作</string>
    <string name="uploadnum">今日上传</string>
    <string name="deletenum">今日删除</string>
</resources>
