<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAllCaps="false"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="App"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            />

        <Button
            android:id="@+id/btnleft"
            android:layout_gravity="left"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonAction"
            android:text="@string/Settings"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal">
        </Button>

        <Button
            android:id="@+id/btnright"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonAction"
            android:text="@string/language"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal">
        </Button>

    </android.support.v7.widget.Toolbar>



    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />

    <Button
        android:id = "@+id/logintest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/button_send"
        />

    <Button
        android:id = "@+id/scantest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/button_send"
        />

</LinearLayout>
