<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.dell.sccs_app.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="App"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="normal"
            />

        <Button
            android:id="@+id/btnleft"
            style="@style/ButtonAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:elevation="0dp"
            android:gravity="center|left"
            android:text="@string/Settings"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal"></Button>
        <Button
            android:id="@+id/btnright"
            android:gravity="center|right"
            android:layout_gravity = "right"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonAction"
            android:text="@string/language"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="normal">
        </Button>

    </android.support.v7.widget.Toolbar>

    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.77">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src = "@drawable/launcher_icon"
                android:layout_marginBottom="40dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tempt"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="test"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/mResultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
